Added trait to skip notifications for branches matching a pattern

--- a/src/main/resources/io/jenkins/plugins/gitlabbranchsource/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/gitlabbranchsource/Messages.properties
@@ -50,6 +50,7 @@ HookRegistrationTrait.displayName=Override GitLab hook management modes
 HookRegistrationTrait.useItem=Use Item credentials for {0} management
 HookRegistrationTrait.useSystem=Use System credentials for {0} management mode (default)
 GitLabSkipNotificationsTrait.displayName=Skip pipeline status notifications
+GitLabSkipNotificationsOnBranchesTrait.displayName=Skip pipeline status notifications on branches
 GitLabAvatarTrait.displayName=Disable GitLab project avatars
 LogCommentTrait.displayName=Log build status as comment on GitLab
 TriggerMRCommentTrait.displayName=Trigger build on merge request comment
