Ignore archived projects by default, and add option to include

--- a/src/main/resources/io/jenkins/plugins/gitlabbranchsource/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/gitlabbranchsource/Messages.properties
@@ -19,6 +19,7 @@ ProjectNamingStrategyTrait.displayName=Project Naming Strategy
 ProjectNamingStrategyTrait.fullProjectPath=Full Project Path
 ProjectNamingStrategyTrait.projectName=Project Name
 SubGroupProjectDiscoveryTrait.displayName=Discover subgroup projects
+ArchivedProjectDiscoveryTrait.displayName=Discover archived projects
 TagDiscoveryTrait.authorityDisplayName=Trust origin tags
 TagDiscoveryTrait.displayName=Discover tags
 GitLabSCMSource.TagCategory=Tags
